Adjust width of the device selection to avoid clipping the 'Simulation' string

--- a/wasm/web-server-test/src/VovkPLCEditor.css
+++ b/wasm/web-server-test/src/VovkPLCEditor.css
@@ -143,7 +143,7 @@ ul {
     flex-direction: row;
     align-items: center;
     padding: 0px;
-    width: 50%;
+    width: 55%;
     background: #444;
     border-right: 1px solid #ccc;
 }
@@ -167,7 +167,7 @@ ul {
     align-items: center;
     padding: 0px;
     padding-left: 5px;
-    width: 50%;
+    width: 45%;
     background: #444;
     color: #DDD;
     cursor: pointer;
